# Horizon-API

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  my_database.db  package-lock.json  package.json  users.db
migrations/2024-07-24-035038_create_users/: up.sql
src/: handlers.rs  main.rs  models.rs  setup_db.rs
src/db_schemas/: users.json
src/middleware/: auth.rs
