[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.13"
jsonwebtoken = "8.2"
chrono = "0.4"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql", "macros"] }